--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="text_three texts">TEAMMATES</div>
         </div>
 
-        <div class="stat_one stat">
+        <div class="stat_four stat">
             <div class="number_three numbers">30</div>
             <div class="text_three texts">stores</div>
         </div>
@@ -143,7 +143,6 @@
 
             <button class="button">Contact us</button>
 
-            <!-- <a href="#" class="button">Contact us</a> -->
         </div>
     </div>
 
@@ -200,8 +199,8 @@
 
         <div class="under_footer">
             <div class="button__slik">
-                <button class="prev"><</button>
-                <button class="next">></button>
+                <button class="prev buttons"><</button>
+                <button class="next buttons">></button>
             </div>
         </div>
 
@@ -247,10 +246,10 @@
         <div class="footer_two">
             <div class="footer_two__text">Copyright © 2019 . Your companyname All rights reserved</div>
             <div class="footer_two__links">
-                <a class="link_one footer__links" href="#"> <img src="/icons/Slice_5.png" alt=""></a>
-                <a class="link_two footer__links" href="#"> <img src="/icons/Slice_6.png" alt=""></a>
-                <a class="link_three footer__links" href="#"><img src="/icons/Slice_1.png" alt=""></a>
-                <a class="link_four footer__links" href="#"><img src="/icons/Slice_2.png" alt=""></a>
+                <a class="link_google+ footer__links" href="#"> <img src="/icons/Slice_5.png" alt=""></a>
+                <a class="link_twitter footer__links" href="#"> <img src="/icons/Slice_6.png" alt=""></a>
+                <a class="link_instagram footer__links" href="#"><img src="/icons/Slice_1.png" alt=""></a>
+                <a class="link_facebook footer__links" href="#"><img src="/icons/Slice_2.png" alt=""></a>
             </div>
         </div>
     </div>
@@ -269,7 +268,6 @@
             slidesToShow: 1,
             centerMode: true,
             variableWidth: true,
-            // arrows: false,
             prevArrow: $('.prev'),
             nextArrow: $('.next'),
         });
